deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydemo
  namespace: default
  annotations:
    deployment.kubernetes.io/revision: '4'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydemo
  template:
    metadata:
      labels:
        app: mydemo
    spec:
      containers:
      - name: mydemo
        image: mycluster.icp:8500/default/devops-demo:99.99
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: mydemo-service
  namespace: default
  labels:
    app: mydemo
spec:
  ports:
  - name: '8080'
    protocol: TCP
    port: 9080
    targetPort: 9080
    nodePort: 32333
  selector:
    app: mydemo
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
