deploy_dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydemo-dev
  namespace: default
  annotations:
    deployment.kubernetes.io/revision: '4'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydemo-dev
  template:
    metadata:
      labels:
        app: mydemo-dev
    spec:
      containers:
      - name: mydemo-dev
        image: mycluster.icp:8500/default/devops-demo-dev:99.99
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: mydemo-dev-service
  namespace: default
  labels:
    app: mydemo-dev
spec:
  ports:
  - name: '8080'
    protocol: TCP
    port: 9080
    targetPort: 9080
    nodePort: 32222
  selector:
    app: mydemo-dev
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mydemo-dev-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.demo.icp.cloud.com
    http:
      paths:
      - backend:
          serviceName: mydemo-dev-service
          servicePort: 9080
